<resources>
    <string name="app_name">My Loomo</string>
    <string name="head_pitch">Head Pitch</string>
    <string name="move_ahead">MOVE AHEAD</string>
    <string name="body_yaw">Body Yaw</string>
    <string name="movement">Movement</string>
    <string name="left">LEFT</string>
    <string name="down">DOWN</string>
    <string name="up">UP</string>
    <string name="right">RIGHT</string>
    <string name="reset_head">RESET HEAD</string>
    <string name="title_activity_vision">VisionActivity</string>
    <string name="rgb_camera_640x480">RGB Camera (640x480)</string>
    <string name="depth_camera_320x240">Depth Camera (320x240)</string>
    <string name="fish_camera_640x480">Fisheye Camera (640x480)</string>
    <string name="on_off">On/Off</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="rgb_video">RGB Video</string>
    <string name="depth_video">Depth Video</string>
    <string name="head_video">Head Video</string>
    <string name="fish_video">Fisheye Video</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="head_camera">Head Camera</string>
</resources>
